[package]
name = "icecast-stats"
version = "0.1.0"
authors = ["segler_alex <segler_alex@web.de>"]
repository = "https://github.com/segler-alex/icecast-stats"
categories = ["network-programming", "parsing"]
license = "MIT"
description = "Decode icecast server information from JSON"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"], optional = true }
reqwest = { version = "0.11.2", features = ["blocking", "json"] }
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
url = "2.2.1"
