[package]
name = "icecast-stats"
version = "0.1.1"
authors = ["segler_alex <segler_alex@web.de>"]
repository = "https://github.com/segler-alex/icecast-stats"
categories = ["network-programming", "parsing"]
license = "MIT"
description = "Decode icecast server information from JSON"
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"], optional = true }
reqwest = { version = "0.11.5", features = ["blocking", "json"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
url = "2.2.2"
